--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="./public/libs/assets/font-awesome/css/font-awesome.min.css" type="text/css" />
   <link rel="stylesheet" href="./public/libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
   <link rel="stylesheet" href="./public/libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
-
+  <link rel="stylesheet" href="./public/libs/jquery/bootstrap/dist/css/bootstrap.dialog.min.css" type="text/css" />
+<!--/Users/depengli/1234567backend/instrumentPlatform/src/public/libs/jquery/bootstrap/dist/css/bootstrap.dialog.min.css-->
   <link rel="stylesheet" href="./public/css/font.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/app.css" type="text/css" />
   
@@ -37,6 +38,8 @@
 
   <script type="text/javascript" src="./public/libs/jquery/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="./public/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
+  <script type="text/javascript" src="./public/libs/jquery/bootstrap/dist/js/bootstrap.dialog.min.js"></script>
+  <!--/Users/depengli/1234567backend/instrumentPlatform/src/public/libs/jquery/bootstrap/dist/js/bootstrap.dialog.min.js-->
   <script type="text/javascript" src="./public/js/ui-load.js"></script>
   <script type="text/javascript" src="./public/js/ui-jp.config.js"></script>
 </head>
