--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 <script type="text/javascript" src="./public/editor/js/plugins/video.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/plugins/help.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/plugins/print.min.js"></script>
-<!--<script type="text/javascript" src="./public/editor/js/third_party/spell_checker.min.js"></script>-->
+<script type="text/javascript" src="./public/editor/js/third_party/spell_checker.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/plugins/special_characters.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/plugins/word_paste.min.js"></script>
 
