--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <title>Instrument</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
   <meta http-equiv="Access-Control-Allow-Origin" content="*" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./public/libs/assets/animate.css/animate.css" type="text/css" />
@@ -13,10 +15,15 @@
   <link rel="stylesheet" href="./public/libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
   <link rel="stylesheet" href="./public/libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
   <link rel="stylesheet" href="./public/libs/jquery/bootstrap/dist/css/bootstrap.dialog.min.css" type="text/css" />
-<!--/Users/depengli/1234567backend/instrumentPlatform/src/public/libs/jquery/bootstrap/dist/css/bootstrap.dialog.min.css-->
   <link rel="stylesheet" href="./public/css/font.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/app.css" type="text/css" />
-  
+  <link rel="stylesheet" href="./public/css/nivo-lightbox-theme/default/default.css" type="text/css" />
+  <link rel="stylesheet" href="./public/css/nivo-lightbox.css" type="text/css" />
+
+  <link rel="stylesheet" href="./public/css/owl.carousel.css" type="text/css" />
+  <link rel="stylesheet" href="./public/css/owl.theme.css" type="text/css" />
+
+<!--   
   <link rel="stylesheet" href="./public/editor/css/froala_editor.css">
   <link rel="stylesheet" href="./public/editor/css/froala_style.css">
   <link rel="stylesheet" href="./public/editor/css/plugins/code_view.css">
@@ -34,12 +41,9 @@
   <link rel="stylesheet" href="./public/editor/css/plugins/quick_insert.css">
   <link rel="stylesheet" href="./public/editor/css/plugins/help.css">
   <link rel="stylesheet" href="./public/editor/css/third_party/spell_checker.css">
-  <link rel="stylesheet" href="./public/editor/css/plugins/special_characters.css">
-
+  <link rel="stylesheet" href="./public/editor/css/plugins/special_characters.css"> -->
   <script type="text/javascript" src="./public/libs/jquery/jquery/dist/jquery.js"></script>
-  <script type="text/javascript" src="./public/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
-  <script type="text/javascript" src="./public/libs/jquery/bootstrap/dist/js/bootstrap.dialog.min.js"></script>
-  <!--/Users/depengli/1234567backend/instrumentPlatform/src/public/libs/jquery/bootstrap/dist/js/bootstrap.dialog.min.js-->
+ <!--/Users/depengli/1234567backend/instrumentPlatform/src/public/libs/jquery/bootstrap/dist/js/bootstrap.dialog.min.js-->
   <script type="text/javascript" src="./public/js/ui-load.js"></script>
   <script type="text/javascript" src="./public/js/ui-jp.config.js"></script>
 </head>
@@ -49,8 +53,12 @@
 </body>
 
 
+  <script type="text/javascript" src="./public/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
+  <script type="text/javascript" src="./public/libs/jquery/bootstrap/dist/js/bootstrap.dialog.min.js"></script>
+ 
 <script type="text/javascript" src="./public/libs/jquery/jquery.form.min.js"></script>
-<script type="text/javascript" src="./public/editor/js/froala_editor.min.js"></script>
+<script type="text/javascript" src="./public/js/owl.carousel.min.js"></script>
+<!-- <script type="text/javascript" src="./public/editor/js/froala_editor.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/plugins/align.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/plugins/char_counter.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/plugins/code_beautifier.min.js"></script>
@@ -81,7 +89,7 @@
 <script type="text/javascript" src="./public/editor/js/plugins/print.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/third_party/spell_checker.min.js"></script>
 <script type="text/javascript" src="./public/editor/js/plugins/special_characters.min.js"></script>
-<script type="text/javascript" src="./public/editor/js/plugins/word_paste.min.js"></script>
+<script type="text/javascript" src="./public/editor/js/plugins/word_paste.min.js"></script> -->
 
 <!--<script type="text/javascript" src="./public/js/ui-jp.js"></script>-->
 <script type="text/javascript" src="./public/js/ui-nav.js"></script>
