--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
   <link rel="stylesheet" href="./public/libs/jquery/bootstrap/dist/css/bootstrap.dialog.min.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/font.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/app.css" type="text/css" />
+  <style type="text/css">
+  @charset "UTF-8";a{color:#3B5998;outline:0}a:hover{color:#d60000;text-decoration:underline}a.redlink:link,a.redlink:visited{color:#d60000}a.blacklink:link,a.blacklink:visited{color:#333}a.redlink:hover,a.blacklink:hover{color:#d60000;text-decoration:underline}.red{color:#d60000}ins,a{text-decoration:none}.fn-clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.fn-clear{zoom:1}body .fn-hide{display:none}.fn-left,.fn-right{display:inline}.fn-left{float:left}.fn-right{float:right}.fn-fontsize12{font-size:12px}.fn-fontsize14{font-size:14px}
+  </style>
+
   <script type="text/javascript" src="./public/libs/jquery/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="./public/js/ui-load.js"></script>
   <script type="text/javascript" src="./public/js/ui-jp.config.js"></script>
