--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,5 @@
 <script type="text/javascript" src="./public/js/ui-nav.js"></script>
 <script type="text/javascript" src="./public/js/ui-toggle.js"></script>
 <script type="text/javascript" src="./public/js/ui-client.js"></script>
-
-
+<script type="text/javascript" src="./public/js/jquery.blueimp-gallery.min.js"></script>
 </html>
