--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
   <link rel="stylesheet" href="./public/libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
   <link rel="stylesheet" href="./public/libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
   <link rel="stylesheet" href="./public/libs/jquery/bootstrap/dist/css/bootstrap.dialog.min.css" type="text/css" />
-  <link rel="stylesheet" href="./public/editor/css/plugins/emoticons.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="./public/editor/css/froala_editor.min.css" type="text/css" /> -->
+  <!-- /Users/depengli/1234567backend/instrumentPlatform/src/public/editor/css/froala_editor.min.css -->
   <link rel="stylesheet" href="./public/js/css/cropper.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/font.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/app.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/select.min.css" type="text/css" />
- 
   <style type="text/css">
   @charset "UTF-8";a{color:#3B5998;outline:0}a:hover{color:#d60000;text-decoration:underline}a.redlink:link,a.redlink:visited{color:#d60000}a.blacklink:link,a.blacklink:visited{color:#333}a.redlink:hover,a.blacklink:hover{color:#d60000;text-decoration:underline}.red{color:#d60000}ins,a{text-decoration:none}.fn-clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.fn-clear{zoom:1}body .fn-hide{display:none}.fn-left,.fn-right{display:inline}.fn-left{float:left}.fn-right{float:right}.fn-fontsize12{font-size:12px}.fn-fontsize14{font-size:14px}
   </style>
