--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>乐器之家</title>
+  <title>异曲汇</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -22,6 +22,8 @@
   <style type="text/css">
   @charset "UTF-8";a{color:#3B5998;outline:0}a:hover{color:#d60000;text-decoration:underline}a.redlink:link,a.redlink:visited{color:#d60000}a.blacklink:link,a.blacklink:visited{color:#333}a.redlink:hover,a.blacklink:hover{color:#d60000;text-decoration:underline}.red{color:#d60000}ins,a{text-decoration:none}.fn-clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.fn-clear{zoom:1}body .fn-hide{display:none}.fn-left,.fn-right{display:inline}.fn-left{float:left}.fn-right{float:right}.fn-fontsize12{font-size:12px}.fn-fontsize14{font-size:14px}
   </style>
+    <!-- <link rel="stylesheet" media="all" href="https://cdn0.froala.com/assets/B/application-9bf301e161b9b4b7b427acc07dfe49e0.css" /> -->
+    <link rel="stylesheet" media="all" href="https://cdn0.froala.com/assets/editor/v2x0/application-fb53719806067ff79acaa34894da08f3.css" />
 
   <script type="text/javascript" src="./public/libs/jquery/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="./public/js/ui-load.js"></script>
@@ -44,4 +46,6 @@
   <script type="text/javascript" src="./public/js/jquery.blueimp-gallery.min.js"></script>
   <script type="text/javascript" src="./public/js/cropper.min.js"></script>
   <script type="text/javascript" src="./public/js/select.min.js"></script>
+  <!-- <script src="https://cdn0.froala.com/assets/B/application-c7e2f6e37bb2d8dc23d7909387d894bc.js"></script> -->
+  <script src="https://cdn0.froala.com/assets/editor/v2x0/application-651019a3e4a1c8b7bf3bd227edf01968.js"></script>
 </html>
