--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,9 @@
   <style type="text/css">
   @charset "UTF-8";a{color:#3B5998;outline:0}a:hover{color:#d60000;text-decoration:underline}a.redlink:link,a.redlink:visited{color:#d60000}a.blacklink:link,a.blacklink:visited{color:#333}a.redlink:hover,a.blacklink:hover{color:#d60000;text-decoration:underline}.red{color:#d60000}ins,a{text-decoration:none}.fn-clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.fn-clear{zoom:1}body .fn-hide{display:none}.fn-left,.fn-right{display:inline}.fn-left{float:left}.fn-right{float:right}.fn-fontsize12{font-size:12px}.fn-fontsize14{font-size:14px}
   </style>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/css/froala_style.min.css" rel="stylesheet" type="text/css" />
+  
+  <link href="./public/editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
+  <link href="./public/editor/css/froala_style.min.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="./public/libs/jquery/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="./public/js/ui-load.js"></script>
   <script type="text/javascript" src="./public/js/ui-jp.config.js"></script>
@@ -45,5 +46,5 @@
   <script type="text/javascript" src="./public/js/jquery.blueimp-gallery.min.js"></script>
   <script type="text/javascript" src="./public/js/cropper.min.js"></script>
   <script type="text/javascript" src="./public/js/select.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/js/froala_editor.pkgd.min.js"></script>
+  <script type="text/javascript" src="./public/editor/js/froala_editor.pkgd.min.js"></script>
 </html>
