--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,11 @@
   <link rel="stylesheet" href="./public/css/font.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/app.css" type="text/css" />
   <link rel="stylesheet" href="./public/css/select.min.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="./public/js/css/video-js.css" type="text/css" /> -->
+    <!-- If you'd like to support IE8 -->
+  <!-- <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script> -->
   <style type="text/css">
-  @charset "UTF-8";a{color:#3B5998;outline:0}a:hover{color:#d60000;text-decoration:underline}a.redlink:link,a.redlink:visited{color:#d60000}a.blacklink:link,a.blacklink:visited{color:#333}a.redlink:hover,a.blacklink:hover{color:#d60000;text-decoration:underline}.red{color:#d60000}ins,a{text-decoration:none}.fn-clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.fn-clear{zoom:1}body .fn-hide{display:none}.fn-left,.fn-right{display:inline}.fn-left{float:left}.fn-right{float:right}.fn-fontsize12{font-size:12px}.fn-fontsize14{font-size:14px}
+  a{color:#3B5998;outline:0}a:hover{color:#d60000;text-decoration:underline}a.redlink:link,a.redlink:visited{color:#d60000}a.blacklink:link,a.blacklink:visited{color:#333}a.redlink:hover,a.blacklink:hover{color:#d60000;text-decoration:underline}.red{color:#d60000}ins,a{text-decoration:none}.fn-clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.fn-clear{zoom:1}body .fn-hide{display:none}.fn-left,.fn-right{display:inline}.fn-left{float:left}.fn-right{float:right}.fn-fontsize12{font-size:12px}.fn-fontsize14{font-size:14px}
   </style>
   
   <link href="./public/editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
@@ -31,6 +34,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
   <script type="text/javascript" src="./public/js/io.rtc.client.js"></script>
   <script type="text/javascript" src="./public/js/io.adapter.js"></script>
+  <script type="text/javascript" src="./public/js/player.js"></script>
 </head>
 
 <body>
@@ -47,4 +51,5 @@
   <script type="text/javascript" src="./public/js/cropper.min.js"></script>
   <script type="text/javascript" src="./public/js/select.min.js"></script>
   <script type="text/javascript" src="./public/editor/js/froala_editor.pkgd.min.js"></script>
+  <!-- <script src="http://vjs.zencdn.net/6.2.7/video.js"></script> -->
 </html>
